Fix overflow

--- a/uhcstyle.css
+++ b/uhcstyle.css
@@ -175,6 +175,12 @@ body {
   font-family: zara;
 }
 
+@media (min-aspect-ratio: 16/9) {
+  #homewrap {
+    background-size: 110%;
+  }
+}
+
 @media only screen and (min-width: 600px) {
   #homewrap {
     background-image: var(--f), var(--b);
